# mcp-code-guidance

./: .gitignore  README.md  README_ZH.md
mcp-server-01quickstart/: .gitignore  README.md  README01.md  main01.py  mcp-server-01quickstart.py
mcp-server-02weather/: .gitignore  README.md  pyproject.toml  server.py
mcp-server-03stock/: .gitignore  main.py  mcp-server-03stock.py  pyproject.toml
mcp-server-quickstart01/: README.md  main.py  pyproject.toml
my-project/src/my_project/: __init__.py  task_manager.py
tutorial/: uv-installer.sh
tutorial/python3-tutorial/: python3-tutorial
