[project]
name = "mcp-server-03stock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.16.81",
    "fastmcp>=2.2.3",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
]
